--- a/shelter/pages/pets/pets.scss
+++ b/shelter/pages/pets/pets.scss
@@ -270,7 +270,7 @@ body {
         background: none;
         border: 2px solid $color-dark-s;
         color: $color-dark-s;
-        
+        cursor: auto;
       }
 
       .btn-active {
