--- a/shelter/pages/main/main.scss
+++ b/shelter/pages/main/main.scss
@@ -87,13 +87,13 @@ $color-dark-3xl:#292929;
 	
 }
 
-body {
-	overflow-x: hidden;
-}
+// body {
+// 	overflow-x: hidden;
+// }
 
 
 .header {
-	width: 100vw;
+	width: 100%;
 	position: absolute;
 	top: 6rem;
 
@@ -141,12 +141,14 @@ body {
 	display: flex;
 	width: 44.3rem;
 	// margin-top: 1.6rem;
-	align-self: center;
+	// align-self: center;
+	padding-bottom: 0.3rem;
 	
 }
 
 .list {
 	@include paragraph-l;
+	// letter-spacing: 0.003rem ;
 	display: flex;
 	list-style-type: none;
 	width: 100%;
@@ -193,7 +195,7 @@ body {
 }
 
 .main {
-	width: 100vw;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 		
@@ -219,7 +221,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	padding-bottom: 8.4rem;
+	padding-bottom: 8.0rem;
 
 	&__title {
 	  @include h2-block;
@@ -230,7 +232,7 @@ body {
 		@include paragraph-l;
 		color: $color-dark-s;
 		max-width: 46rem;
-		margin-top: 4.2rem;
+		margin-top: 4.1rem;
 		 
 	}
 
@@ -565,7 +567,7 @@ body {
 }
 
 .footer {
-	width: 100vw;
+	width: 100%;
 	// min-height: 350px;
 	padding-top: 4rem;
 	background: url('../../assets/images/noise_transparent@2x.png'), 
